# chess-exercises-organizer-iced

./: Cargo.toml  README.md
src/: graphic.rs  main.rs
src/graphic/: chess_board.rs  chess_board_component.rs  main_window.rs
