[package]
name = "chess-exercises-organizer-rust-iced"
version = "0.1.0"
authors = ["Laurent Bernabe <laurent.bernabe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.2"
iced_graphics = "0.1.0"
iced_native = "0.3.0"
pleco = "0.5.0"